--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "classlist.js": "^1.1.20150312",
     "firebase": "^6.2.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
